--- a/src/component/BookLibrary.css
+++ b/src/component/BookLibrary.css
@@ -124,4 +124,35 @@
   .quote-close-button {
     margin-top: 20px;
   }
+  .grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    width: 500px;
+    height: 500px;
+    border: 1px solid black;
+    padding: 10px;
+    box-sizing: border-box;
+    background-color: aqua;
+  }
+  
+ 
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 330px;
+    width: 300px;
+  }
+  
+  .card img {
+    width: 100%;
+    height: 360px; /* Adjust the height as needed */
+    object-fit: cover;
+    object-position: center;
+  }
+  
   
